samples/_failures_safe/1761668073_660e9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f178f0d.c: In function ‘main’:
./samples/SAFE/__tmp_0f178f0d.c:133:16: error: missing terminating " character
  133 |         printf("Invalid input.\
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0f178f0d.c:133:9: error: expected expression at end of input
  133 |         printf("Invalid input.\
      |         ^~~~~~
./samples/SAFE/__tmp_0f178f0d.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f178f0d.c:133:9: error: expected declaration or statement at end of input
